Fix padding and alignment of trending section

--- a/style.css
+++ b/style.css
@@ -345,9 +345,9 @@ font-weight: 200;
   border-radius: 0.6rem;
   font-size: 1rem;
   flex-wrap: wrap;
-  padding: 2rem;
+  padding: 1.4rem;
   margin-top: 10px;
-  
+  width: 235px;
 }
 
 .trend-items p {
